--- a/src/scss/apps/eotg/components/_hero.scss
+++ b/src/scss/apps/eotg/components/_hero.scss
@@ -3,9 +3,8 @@
     padding-top: 4rem;
     
     &__container {
-        width: 80%;
-        margin-left: 10%;
-        height: 87%;
+        width: 100%;
+        height: 100%;
     }
 
     &__title {
@@ -33,10 +32,6 @@
         display: block;
         margin-left: auto;
         margin-top: 1rem;
-
-        @include media-breakpoint-down(sm) {
-            margin: 2rem auto;
-        }
     }
 
     &__logo {
